Changed the script path to static

--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@
 
     <!-- ### main component loader/entrypoint ### -->
     <script type="module" src="/src/loader.js"></script>
-
     <!-- ### third party libraries ### -->
-    <script src="src/assets/js/jquery-3.7.1.min.js"></script>
-    <script src="src/assets/js/owl.carousel.min.js"></script>
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
   </body>
 </html>
