--- a/course.html
+++ b/course.html
@@ -396,7 +396,7 @@
     <script></script>
 
     <!-- ### third party libraries ### -->
-    <script src="src/assets/js/jquery-3.7.1.min.js"></script>
-    <script src="src/assets/js/owl.carousel.min.js"></script>
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
   </body>
 </html>
