Added fix for extra small devices

--- a/course.html
+++ b/course.html
@@ -29,7 +29,7 @@
         <div class="relative" id="courseDetail"></div>
         <!-- left card -->
         <div
-          class="courseADCard relative bg-white min-w-[480px] rounded-[30px] p-[30px]"
+          class="courseADCard relative bg-white min-w-[480px] max-xs:min-w-[280px] rounded-[30px] p-[30px]"
         >
           <!-- top register -->
           <div
@@ -64,7 +64,7 @@
               </div>
               <div class="flex items-center gap-[10px]">
                 <button
-                  class="flex items-center gap-[5px] bg-brandSecondary text-white text-[12px] font-semibold px-[20px] rounded-[39px]"
+                  class="flex items-center gap-[5px] bg-brandSecondary text-white text-[12px] font-semibold px-[20px] max-xs:px-[3px] max-xs:gap-[1px] rounded-[39px]"
                 >
                   <span class="text-2xl mdi mdi-account-plus"></span>
                   <span>إحجز مكانك الآن</span>
@@ -97,7 +97,7 @@
               </div>
               <div class="flex items-center gap-[10px]">
                 <button
-                  class="flex items-center gap-[5px] bg-brandSecondary text-white text-[12px] font-semibold px-[20px] rounded-[39px]"
+                  class="flex items-center gap-[5px] bg-brandSecondary text-white text-[12px] font-semibold px-[20px] max-xs:px-[3px] max-xs:gap-[1px] rounded-[39px]"
                 >
                   <span class="text-2xl mdi mdi-account-plus"></span>
                   <span>إحجز مكانك الآن</span>
@@ -130,7 +130,7 @@
               </div>
               <div class="flex items-center gap-[10px]">
                 <button
-                  class="flex items-center gap-[5px] bg-brandSecondary text-white text-[12px] font-semibold px-[20px] rounded-[39px]"
+                  class="flex items-center gap-[5px] bg-brandSecondary text-white text-[12px] font-semibold px-[20px] max-xs:px-[3px] max-xs:gap-[1px] rounded-[39px]"
                 >
                   <span class="text-2xl mdi mdi-account-plus"></span>
                   <span>إحجز مكانك الآن</span>
@@ -234,7 +234,9 @@
     <!-- ### course program end ### -->
 
     <!-- ### course info start ### -->
-    <section class="flex p-[35px] bg-bgColorBody w-screen">
+    <section
+      class="flex p-[35px] max-xs:p-0 max-xs:pb-4 bg-bgColorBody w-screen"
+    >
       <div
         class="relative max-sm:p-1 max-xl:p-[30px] p-[150px] !pt-[80px] pb-[50px] bg-white shadow-custom rounded-[30px] w-full"
       >
