--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     <!-- ### Hero Section End ### -->
 
     <!-- ### main section start ### -->
-    <section class="w-full flex flex-col items-center p-[35px] pe-[44px]">
+    <section
+      class="w-full flex flex-col items-center p-[35px] pe-[44px] max-xs:p-0"
+    >
       <!-- container -->
       <div
         class="course-container relative bg-white rounded-[30px] h-72 flex-1 w-full"
@@ -73,7 +75,7 @@
             </button>
           </div>
         </div>
-        <div class="p-4" id="courseCardsContainer"></div>
+        <div class="p-4 max-xs:p-0" id="courseCardsContainer"></div>
       </div>
     </section>
     <!-- ### main section start ### -->
