--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -48,7 +48,7 @@
         <div class="flex flex-col gap-[15px]">
           <div class="tittle text-2xl font-bold">تحقق من شهادتك</div>
           <form
-            class="flex border-none bg-white h-[60px] w-[370px] flex-row border rounded-[50px] focus-within:outline focus-within:outline-1 focus-within:outline-brandPrimary"
+            class="flex border-none bg-white h-[60px] w-[370px] max-xs:w-[280px] flex-row border rounded-[50px] focus-within:outline focus-within:outline-1 focus-within:outline-brandPrimary"
           >
             <input
               type="text"
