Fixed mobile menu position

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -45,7 +45,7 @@
 
     <!-- mobile menu -->
     <div
-      class="menu -ms-2 opacity-0 hidden translate-x-full transition-all duration-500 absolute inset-0 w-screen h-screen bg-brandPrimary"
+      class="menu opacity-0 hidden translate-x-full transition-all duration-500 fixed inset-0 w-screen h-screen bg-brandPrimary"
       id="mobileNav"
     >
       <button
